reading data from database and deleting gridview

--- a/store.html
+++ b/store.html
@@ -8,7 +8,8 @@
         <title>Shafagh Online Store</title>
         <link rel="stylesheet" type="text/css" href="store.css">
 </head>
-
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.min.js"></script>
+<script src="js/loaded.js"></script>
 <body>
         <div class="navBar">
                 <img src="logo.png" class="logo">
@@ -104,136 +105,19 @@
 
         </div>
 
-
-        <div class="product">
-                <div class="prod1">
-                        <a
-                                href="https://www.digikala.com/product/dkp-6460974/گوشی-موبایل-اپل-مدل-iphone-13-pro-max-a2413-دو-سیم-کارت-ظرفیت-256-گیگابایت-و-رم-6-گیگابایت"><img
-                                        class="prod-img" src="Product Images/prod 1.png"></a>
-                        <p class="prod-title">گوشی موبایل اپل</p>
-                        <p>مدل iPhone 13 Pro Max A2644 دو سیم‌ کارت ظرفیت 256 گیگابایت و رم 6</p>
-                        <p><u>۴۷,۳۵۰,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod2">
-                        <a
-                                href="https://www.digikala.com/product/dkp-6719929/لپ-تاپ-156-اینچی-ایسوس-مدل-rog-strix-g533qs-hf208-clone-1-of-6719090"><img
-                                        class="prod-img" src="Product Images/prod 2.png"></a>
-                        <p class="prod-title">لپ تاپ 15.6 اینچی ایسوس</p>
-                        <p> مدل ROG Strix G513QR-HF245</p>
-                        <p><u>۸۱,۸۰۰,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod3">
-                        <a
-                                href="https://www.digikala.com/product/dkp-6439357/تبلت-سامسونگ-مدل-galaxy-tab-s7-fe-lte-sm-t735-ظرفیت-64-گیگابایت"><img
-                                        class="prod-img" src="Product Images/prod 3.png"></a>
-                        <p class="prod-title">تبلت سامسونگ </p>
-                        <p>مدل Galaxy Tab S7 FE LTE SM-T735 ظرفیت 64 گیگابایت</p>
-                        <p><u>۱۲,۸۰۰,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod4">
-                        <a
-                                href="https://www.digikala.com/product/dkp-6439357/تبلت-سامسونگ-مدل-galaxy-tab-s7-fe-lte-sm-t735-ظرفیت-64-گیگابایت"><img
-                                        class="prod-img" src="Product Images/prod 4.png"></a>
-                        <p class="prod-title">هدفون بی سیم سامسونگ</p>
-                        <p>مدل Galaxy Buds Pro</p>
-                        <p><u>۳,۳۴۰,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod5">
-                        <a
-                                href="https://www.digikala.com/product/dkp-33881/فلش-مموری-ای-دیتا-مدل-dashdrive-uv150-ظرفیت-64-گیگابایت"><img
-                                        class="prod-img" src="Product Images/prod 5.png"></a>
-                        <p class="prod-title">فلش مموری ای دیتا </p>
-                        <p>مدل DashDrive UV150 ظرفیت 64 گیگابایت</p>
-                        <p><u>۲۰۶,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod6">
-                        <a
-                                href="https://www.digikala.com/product/dkp-90544/فلش-مموری-سیلیکون-پاور-مدل-touch-t06-ظرفیت-32-گیگابایت"><img
-                                        class="prod-img" src="Product Images/prod 6.png"></a>
-                        <p class="prod-title">فلش مموری سیلیکون پاور </p>
-                        <p>مدل Touch T06 ظرفیت 32 گیگابایت</p>
-                        <p><u>۱۴۳,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod7">
-                        <a
-                                href="https://www.digikala.com/product/dkp-4330247/گوشی-موبایل-سامسونگ-مدل-galaxy-s21-ultra-5g-sm-g998bds-دو-سیم-کارت-ظرفیت-256-گیگابایت-و-رم-12-گیگابایت"><img
-                                        class="prod-img" src="Product Images/prod 7.png"></a>
-                        <p class="prod-title">گوشی موبایل سامسونگ </p>
-                        <p>مدل Galaxy S21 Ultra 5G SM-G998B/DS دو سیم کارت ظرفیت 256 گیگابایت و رم 12 گیگابایت</p>
-                        <p><u>۳۰,۴۰۰,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod8">
-                        <a
-                                href="https://www.digikala.com/product/dkp-5260433/تبلت-مایکروسافت-مدل-surface-pro-7-plus-g-ظرفیت-1-ترابایت-به-همراه-کیبورد-black-type-cover"><img
-                                        class="prod-img" src="Product Images/prod 8.png"></a>
-                        <p class="prod-title">تبلت مایکروسافت </p>
-                        <p>مدل Surface Pro 7 Plus - G ظرفیت 1 ترابایت به همراه کیبورد Black Type Cover</p>
-                        <p><u>۶۵,۹۰۰,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod9">
-                        <a
-                                href="https://www.digikala.com/product/dkp-3784925/لپ-تاپ-13-اینچی-اپل-مدل-macbook-pro-myd92-2020-همراه-با-تاچ-بار"><img
-                                        class="prod-img" src="Product Images/prod 9.png"></a>
-                        <p class="prod-title">لپ تاپ 13 اینچی اپل </p>
-                        <p>مدل MacBook Pro MYD92 2020 همراه با تاچ بار</p>
-                        <p><u>۴۳,۹۷۴,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod10">
-                        <a href="https://www.digikala.com/product/dkp-6625943/هندزفری-بلوتوثی-شیائومی-مدل-flipbuds-pro"><img
-                                        class="prod-img" src="Product Images/prod 10.png"></a>
-                        <p class="prod-title">هندزفری بلوتوثی شیائومی</p>
-                        <p>مدل FlipBuds Pro</p>
-                        <p><u>۴,۸۷۲,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod11">
-                        <a
-                                href="https://www.digikala.com/product/dkp-1999595/فلش-مموری-سن-دیسک-مدل-cruzer-fit-cz33-ظرفیت-32-گیگابایت"><img
-                                        class="prod-img" src="Product Images/prod 11.png"></a>
-                        <p class="prod-title">فلش مموری سن دیسک</p>
-                        <p>مدل Cruzer Fit CZ33 ظرفیت 32 گیگابایت</p>
-                        <p><u>۱۱۸,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod12">
-                        <a
-                                href="https://www.digikala.com/product/dkp-186455/فلش-مموری-سن-دیسک-مدل-ultra-dual-drive-usb-type-c-ظرفیت-128-گیگابایت"><img
-                                        class="prod-img" src="Product Images/prod 12.png"></a>
-                        <p class="prod-title">فلش مموری سن دیسک</p>
-                        <p>مدل Ultra Dual Drive USB Type-C ظرفیت 128 گیگابایت</p>
-                        <p><u>۴۹۴,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod13">
-                        <a
-                                href="https://www.digikala.com/product/dkp-2140196/هدفون-بی-سیم-اپل-مدل-airpods-pro-همراه-با-محفظه-شارژ"><img
-                                        class="prod-img" src="Product Images/prod 13.png"></a>
-                        <p class="prod-title">هدفون بی‌ سیم اپل</p>
-                        <p>مدل AirPods Pro همراه با محفظه شارژ</p>
-                        <p><u>۵,۸۸۰,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod14">
-                        <a
-                                href="https://www.digikala.com/product/dkp-5615910/تبلت-اپل-مدل-ipad-pro-129-inch-2021-wifi-ظرفیت-2-ترابایت"><img
-                                        class="prod-img" src="Product Images/prod 14.png"></a>
-                        <p class="prod-title">تبلت اپل</p>
-                        <p>مدل iPad Pro 12.9 inch 2021 WiFi ظرفیت 2 ترابایت</p>
-                        <p><u>۶۹,۹۹۹,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod15">
-                        <a
-                                href="https://www.digikala.com/product/dkp-4958276/گوشی-موبایل-شیائومی-مدل-poco-x3-pro-m2102j20sg-دو-سیم-کارت-ظرفیت-256-گیگابایت-و-8-گیگابایت-رم"><img
-                                        class="prod-img" src="Product Images/prod 15.png"></a>
-                        <p class="prod-title">گوشی موبایل شیائومی</p>
-                        <p>مدل POCO X3 Pro M2102J20SGدو سیم‌ کارت ظرفیت 256 گیگابایت و 8 گیگابایت رم</p>
-                        <p><u>۶,۸۷۵,۰۰۰ تـومـان</u></p>
-                </div>
-                <div class="prod16">
-                        <a
-                                href="https://www.digikala.com/product/dkp-3388401/لپ-تاپ-15-اینچی-لنوو-مدل-legion-5-15imh05h"><img
-                                        class="prod-img" src="Product Images/prod 16.png"></a>
-                        <p class="prod-title">لپ تاپ 15 اینچی لنوو</p>
-                        <p>مدل legion 5 15IMH05H</p>
-                        <p><u>۳۹,۹۸۰,۰۰۰ تـومـان</u></p>
-                </div>
+<div method="post" ng-app="myApp" ng-controller="myController">
+        <div class="product" ng-repeat="x in products">
+                <div class="prod-title"> 
+                        <a href="https://www.digikala.com">
+                                <img class="prod-img" alt="{{x.Pname}}" ng-src="{{x.Pic}}">
+                        </a>
+                        <p class="prod-title">{{x.ProdName}}</p>
+                        <p>{{x.TechInfo}}</p>
+                        <p>{{x.Info}}</p>
+                        <p><u>{{x.Price}} تـومـان</u></p>
+                </div>              
         </div>
+</div>        
         <div class="footer">
                 <div class="info">
                         <div class="contact-us">
